--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 See the end for copying conditions.
 
+* Changes in 0.0.5
+
+** Libstringprep replaced by GNU Libidn 0.1.3.
+
 * Changes in 0.0.4 (released 2002-12-13)
 
 ** License changed to GPL.
