--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ See the end for copying conditions.
 
 * Changes in 0.0.5
 
-** Libstringprep replaced by GNU Libidn 0.1.3.
+** Libstringprep replaced by GNU Libidn.
 
 * Changes in 0.0.4 (released 2002-12-13)
 
