--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,4 @@
-GNU SASL THANKS -- acknowledgements
+GNU SASL THANKS -- Acknowledgements.
 See the end for copying conditions.
 
 Libgsasl uses libntlm by Grant Edwards, libgssapi by MIT, libgcrypt by
