--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -55,7 +55,8 @@ developing GNU and protecting and promoting software freedom.''
 
 @ifnottex
 @node Top
-@top Libgsasl
+@top GNU SASL
+
 @insertcopying
 @end ifnottex
 
