--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,9 @@
 GNU SASL AUTHORS -- information about the authors
+Copyright (C) 2002, 2003 Simon Josefsson
 See the end for copying conditions.
 
 Simon Josefsson <simon@josefsson.org>
-Designed and implemented Libgsasl.
+Designed and implemented GNU SASL.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 Comment: This key is used to sign GNU SASL releases.
@@ -40,8 +41,6 @@ HGlBrIkG2vSgie4=
 -----END PGP PUBLIC KEY BLOCK-----
 
 ----------------------------------------------------------------------
-Copyright (C) 2002 Simon Josefsson
-
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.
