--- a/THANKS
+++ b/THANKS
@@ -3,9 +3,9 @@ Copyright (C) 2002, 2003 Simon Josefsson
 See the end for copying conditions.
 
 Libgsasl uses libntlm by Grant Edwards maintained by Simon Josefsson,
-libgssapi by MIT, libgcrypt by Werner Koch, Libidn and Shishi by Simon
-Josefsson.  Templates for makefiles, manuals etc was borrowed from
-Libgcrypt.
+libgssapi by MIT, libgcrypt by Werner Koch, GSS, Libidn, and Shishi by
+Simon Josefsson.  Templates for makefiles, manuals etc was borrowed
+from Libgcrypt.
 
 Sergey Poznyakoff sent useful bug reports, patches and/or suggested
 improvements.
