--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 Copyright (C) 2002, 2003 Simon Josefsson
 See the end for copying conditions.
 
+* Changes in 0.0.8 (unreleased)
+
+** Bug fixes.
+
 * Changes in 0.0.7 (released 2003-06-02)
 
 ** Two new GSS libraries supported for the GSS-API mechanism.
