--- a/NEWS
+++ b/NEWS
@@ -10,9 +10,12 @@ earlier ad-hoc usage of argp, memset, argp, etc.
 
 ** Math library (-lm) no longer needed.
 
-** Gettext 0.12.1 and libtool 1.5 is used.
+** All client code can be disabled by --disable-client,
+** and all server code can be disabled by --disable-server.
 
-** Libgcrypt from CVS is not supported.
+** Gettext 0.12.1 and Libtool 1.5 is used.
+
+** Libgcrypt from CVS (1.1.42) is not supported.
 Recent libgcrypt is API incompatible with earlier released versions.
 If a too recent version is installed, it will not be used.
 
