--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ See the end for copying conditions.
 The directory gl/ is dedicated for GNULib functions, and replace the
 earlier ad-hoc usage of argp, memset, argp, etc.
 
-** Math library (-lm) no longer needed.
+** Math library (-lm) no longer required.
 
 ** All client code can be disabled by --disable-client,
 ** and all server code can be disabled by --disable-server.
